# qt-booklibrary

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
backend/: CMakeLists.txt  database_manager.cpp  database_manager.h
backend/include/: bookmarks.h  cart.h  database_manager.h  domain.h  library.h  profile.h
backend/src/: bookmarks.cpp  cart.cpp  database_manager.cpp  library.cpp  main.cpp  profile.cpp
